# opengm-externals

./: CMakeLists.txt
conicbundle/files/: CMakeLists.txt
fastpd/: CMakeLists.txt
libdai/files/: CMakeLists.txt
